syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Notification.SignalR.Protos";

service Notification {
	rpc SendNotification(NotificationRequest) returns (NotificationReply);
}

message NotificationRequest {
  string Action = 1;
  string GroupAction = 2;
  string GroupId = 3;
  string AppCode = 4;
  string Message = 5;
  map<string, string> RawData = 6;
  string UserID = 7;
  string SenderId = 8;
  string SenderName = 9;
  google.protobuf.Timestamp CreatedAt = 10;
  string FromAppCode = 11;
}
 
message NotificationReply {
  bool Success = 1;
  string Message = 2;
}